# Shell-Personalizada

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  Makefile  conanfile.txt  config.json
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/workflows/: QAWorkflow.yml
include/: shell.h
src/: config_search.c  hola  main  main.c  shell.c  util.c
test/: CMakeLists.txt  test_shell.c
